LIST OF CHANGES

release 92.3.1
 - A WHILE loop in run_list.tt2 iterates over a number of pages (40 runs
   per page) in a visual listing of runs. The number of pages is now
   (January 2022) sufficiently high to trigger an error in Template Toolkit,
   which, by default, allows 1000 iterations only. The value of
   $Template::Directive::WHILE_MAX variable is, therefore, set to 2000.

release 92.3.0
 - New link in sigularity image to pass npg_tracking configuration file.
 - Removed ability of the tracking server to provide directory views of
   visible to the server /nfs partitions since nfs staging servers are
   no longer used.
 - Removed co-location functionality in npg_tracking views. Co-location checks
   will not make sense once npg_tracking runs in containers in head nodes.
   Staging areas are not local to head node/reachable from within the
   container.
 - Removed old team names from run add template.
 - Removed unused daemon runners for staging daemons and the Jenkins server.
 - Made NovaSeq instruments skip wash statuses after completing a run, this
   does not affect statuses set manually through the UI.
 - Added lab location to instrument pages. Instruments are also now 
   colour-coded on the graphical instrument list page.

release 92.2.0
 - Added singularity definition for the tracking web server.
 - Tracking web pages:
     added folder name column to run listing pages,
     added external instrument name to the instrument page.
 - Patched and refined a script for adding roles to users.

release 92.1.0
 - Change LDAP URL to read-only URL
 - Added a SOP for creating/decommitioning instruments.
 - Removed the samplesheet daemon definition npg_tracking::daemon::samplesheet
   and the auto-generator for samplesheets npg::daemon::samplesheet::auto.
   Both are no longer in use, the functionality was moved to
   https://github.com/wtsi-npg/npg_ml_warehouse, see